syntax = "proto3";
option java_multiple_files = true;
package vn.chiendt.grpc;

service VerifyTokenService{
  rpc verify(VerifyTokenGrpcRequest) returns (VerifyTokenGrpcResponse);
}

message VerifyTokenGrpcRequest {
  string token = 1;
}

message VerifyTokenGrpcResponse {
  int32 status = 1;
  bool isValid = 2;
  string message = 3;
  string username = 4;
  int64 userId = 5;
}